--- a/IEEE_SMART_ATTENDANCE-master/app/src/main/AndroidManifest.xml
+++ b/IEEE_SMART_ATTENDANCE-master/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".Login" />
         <activity android:name=".CreateAccount" />
         <activity android:name=".Profile"></activity>
+        <activity android:name=".Barcode"> </activity>
     </application>
 
 </manifest>
